@@ -1,3 +1,10 @@
+2024-02-17 Gabriele Gorla <gorlik@yahoo.com>
+
+	* src/mos6502/gen.c,
+	  src/mos6502/main.c,
+	  src/mos6502/ralloc.c:
+	  Fix compile warnings and a few typos.
+	
 2024-02-10 Benedikt Freisen <b.freisen AT gmx.net>
 
 	* device/include/mcs51/stc89.h:
